# CasselDB

./: CMakeLists.txt  Doxyfile  Doxyfile copy  README.md
.github/workflows/: cmake.yml  google_test.yml
doc/: index.md
doc/html/: annotated.html  classconfig_1_1version_1_1_version.html  classconfig_1_1version_1_1_version_a5176c4ac13415a527e1d95b366cd136a_cgraph.map  classconfig_1_1version_1_1_version_a5176c4ac13415a527e1d95b366cd136a_cgraph.md5  classconfig_1_1version_1_1_version_a97c49d303bbf54bed2e1e6709deeb67c_icgraph.map  classconfig_1_1version_1_1_version_a97c49d303bbf54bed2e1e6709deeb67c_icgraph.md5  classcore_1_1create_1_1_create_file.html  classcore_1_1create_1_1_create_file_a43f2b324904c658ff34817d6ec9fb3a1_cgraph.map  classcore_1_1create_1_1_create_file_a43f2b324904c658ff34817d6ec9fb3a1_cgraph.md5  classcore_1_1create_1_1_create_file_a43f2b324904c658ff34817d6ec9fb3a1_icgraph.map  classcore_1_1create_1_1_create_file_a43f2b324904c658ff34817d6ec9fb3a1_icgraph.md5  classcore_1_1create_1_1_create_file_a4a03d7c94fa02df112558bc30818e413_icgraph.map  classcore_1_1create_1_1_create_file_a4a03d7c94fa02df112558bc30818e413_icgraph.md5  classcore_1_1create_1_1_create_file_a817b6facc917e0e3e8e0d5cf841b0b6f_icgraph.map  classcore_1_1create_1_1_create_file_a817b6facc917e0e3e8e0d5cf841b0b6f_icgraph.md5  classcore_1_1create_1_1_create_file_abc5870c0e32763e015fdf2766cdedbdc_icgraph.map  classcore_1_1create_1_1_create_file_abc5870c0e32763e015fdf2766cdedbdc_icgraph.md5  classcore_1_1create_1_1_create_file_ad2a9bed378a690df71341003b148deff_cgraph.map  classcore_1_1create_1_1_create_file_ad2a9bed378a690df71341003b148deff_cgraph.md5  classcore_1_1create_1_1_create_file_ad2a9bed378a690df71341003b148deff_icgraph.map  classcore_1_1create_1_1_create_file_ad2a9bed378a690df71341003b148deff_icgraph.md5  classcore_1_1create_1_1_create_folder.html  classcore_1_1create_1_1_create_folder_a1509d1087118debc422238ed2a66c255_cgraph.map  classcore_1_1create_1_1_create_folder_a1509d1087118debc422238ed2a66c255_cgraph.md5  classcore_1_1create_1_1_create_folder_a1509d1087118debc422238ed2a66c255_icgraph.map  classcore_1_1create_1_1_create_folder_a1509d1087118debc422238ed2a66c255_icgraph.md5  classcore_1_1create_1_1_create_folder_a4a03d7c94fa02df112558bc30818e413_icgraph.map  classcore_1_1create_1_1_create_folder_a4a03d7c94fa02df112558bc30818e413_icgraph.md5  classcore_1_1create_1_1_create_folder_a5b946a86687278ed810a8a1ecd49d59b_cgraph.map  classcore_1_1create_1_1_create_folder_a5b946a86687278ed810a8a1ecd49d59b_cgraph.md5  classcore_1_1create_1_1_create_folder_a5b946a86687278ed810a8a1ecd49d59b_icgraph.map  classcore_1_1create_1_1_create_folder_a5b946a86687278ed810a8a1ecd49d59b_icgraph.md5  classcore_1_1create_1_1_create_folder_a7819745bceb4c94e0c47bc8a008e51ff_cgraph.map  classcore_1_1create_1_1_create_folder_a7819745bceb4c94e0c47bc8a008e51ff_cgraph.md5  classcore_1_1create_1_1_create_folder_a7819745bceb4c94e0c47bc8a008e51ff_icgraph.map  classcore_1_1create_1_1_create_folder_a7819745bceb4c94e0c47bc8a008e51ff_icgraph.md5  classcore_1_1create_1_1_create_folder_a7b4b23baf0f41eb554ba030ee03fabe2_icgraph.map  classcore_1_1create_1_1_create_folder_a7b4b23baf0f41eb554ba030ee03fabe2_icgraph.md5  classcore_1_1create_1_1_create_folder_aa71856dcf37bf69cb1046a58346b444b_cgraph.map  classcore_1_1create_1_1_create_folder_aa71856dcf37bf69cb1046a58346b444b_cgraph.md5  (+558 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+47 more)
doc/latex/: files.tex  main_8cpp.tex  refman.tex
docker/: build_cassel_db_api_docs.md  build_container.md  building_env.md
docs/: AST.md  op.md  op_en.md
src/: CMakeLists.txt  main.cpp
src/config/: CMakeLists.txt
src/config/cassel_config/: CMakeLists.txt  cassel_config.cpp  cassel_config.h
src/core/: CMakeLists.txt
src/log4cpp/: CMakeLists.txt  config.json  log.conf  paly.sh
src/log4cpp/config4log/: CMakeLists.txt  config4log.cpp  config4log.h
src/log4cpp/date_time/: CMakeLists.txt  date.cpp  date.h  date_time.cpp  date_time.h  time.cpp  time.h
src/log4cpp/filter4log/: CMakeLists.txt  filter4log.cpp  filter4log.h
src/log4cpp/io4log/: CMakeLists.txt  io4log.cpp  io4log.h
src/log4cpp/level/: CMakeLists.txt  level.cpp  level.h
src/log4cpp/log/: CMakeLists.txt  log.cpp  log.h
src/log4cpp/log2file/: CMakeLists.txt  log2file.cpp  log2file.h
src/log4cpp/log_cache/: CMakeLists.txt  log_cache.cpp  log_cache.h
src/log4cpp/log_module/: CMakeLists.txt  log_module.cpp  log_module.h
src/log4cpp/style4log/: CMakeLists.txt  style4log.cpp  style4log.h
src/module/: CMakeLists.txt
src/module/config/path/install_path/: CMakeLists.txt  install_path.cpp  install_path.h
src/module/create/createDB/: CMakeLists.txt  create_database.cpp  create_database.h
src/module/create/createTB/: CMakeLists.txt  create_table.cpp  create_table.h
src/module/select/database/: CMakeLists.txt  select_database.cpp  select_database.h
src/module/select/table/: CMakeLists.txt  select_table.cpp  select_table.h
src/os/: CMakeLists.txt
src/os/manager/: CMakeLists.txt  cassel_manager.cpp  cassel_manager.h
src/os/manager/base_operation/: CMakeLists.txt  base_operation.cpp  base_operation.h
src/os/manager/config/: CMakeLists.txt  op_config.cpp  op_config.h
src/os/manager/database/: CMakeLists.txt  op_database.cpp  op_database.h
src/os/manager/default/: CMakeLists.txt  op_default.cpp  op_default.h
src/os/manager/status/: CMakeLists.txt  cassel_status.cpp  cassel_status.h
src/os/manager/table/: CMakeLists.txt  op_table.cpp  op_table.h
test/core/create/createFolder/: CMakeLists.txt  test_create_folder.cpp  test_create_folder.h
test/core/read/readFile/: CMakeLists.txt  test_read_file.cpp  test_read_file.h
(+44 files in other folders)
