cmake_minimum_required(VERSION 3.16)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(./level)
add_subdirectory(./log_module)
# add_subdirectory(./style)
# add_subdirectory(./web_connect)
# add_subdirectory(./cache)
# add_subdirectory(./config)
# add_subdirectory(./copy)
# add_subdirectory(./date_time)
# add_subdirectory(./filter)
# add_subdirectory(./io)

# add_subdirectory(./log)



